--- a/EndlessRun/index.html
+++ b/EndlessRun/index.html
@@ -59,9 +59,9 @@
         frameworkUrl: buildUrl + "/EndlessRun.framework.js.gz",
         codeUrl: buildUrl + "/EndlessRun.wasm.gz",
         streamingAssetsUrl: "StreamingAssets",
-        companyName: "DefaultCompany",
+        companyName: "OnlyTop",
         productName: "EndlessRun",
-        productVersion: "0.1",
+        productVersion: "1",
         showBanner: unityShowBanner,
       };
 
